evaluation-runs/568/k8s/validate/resources/account-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-api
  namespace: rrb-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-api
  template:
    metadata:
      labels:
        app: account-api
    spec:
      containers:
        - name: account-api
          image: ralfx22/rrb-account-api
