evaluation-runs/568/k8s/validate/resources/discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: rrb-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: ralfx22/rrb-discovery-server
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: rrb-microservices
spec:
  type: ClusterIP
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    app: discovery-server
