evaluation-runs/568/k8s/validate/resources/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: rrb-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0.11
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: rrb-microservices
spec:
  type: ClusterIP
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    app: redis
